# BTC-Multipool-Cache-Miner

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build_ninja_vs2022.bat  build_with_vs_env.bat  ledger_test.jsonl  runner.jsonl
.bmad-core/: install-manifest.yaml
config/: build.ini  pools.json
docs/: ARCHITECTURE.md  CI_PLAN.md  DoD.md  PRD.md  PROJECT_BRIEF.md  ROADMAP.md  STORY_STREAMLINE.md  STRATEGY.md  TESTING_OPS.md  THIRD_PARTY.md  config-example.ini  story-stream.md
logs/: ckpool-solo.jsonl  cuda0.tuning.json  f2pool.jsonl  mynode-gbt.jsonl  nicehash.jsonl  viabtc.jsonl
scripts/: msvc_env.ps1  msvc_env_auto.ps1
src/: CMakeLists.txt
src/adapters/: adapter_base.h  gbt_adapter.cc  gbt_adapter.h  gbt_runner.cc  gbt_runner.h  pool_profiles.cc  pool_profiles.h  pool_router.cc  pool_router.h  stratum_adapter.cc  stratum_adapter.h  stratum_runner.cc  stratum_runner.h
src/cache/: cache_manager.cc  cache_manager.h  predict_worker.h  vram_pages.cc  vram_pages.h
src/config/: config.cc  config.h
src/cuda/: auto_tune.cpp  auto_tune.h  engine.cu  engine.h  hit_ring.h  launch_plan.h  sha256d.cuh
src/net/: rpc_client.cc  rpc_client.h  socket.h  socket_openssl.cc  socket_posix.cc  socket_win.cc  stratum_client.cc  stratum_client.h
src/normalize/: coinbase.cc  coinbase.h  endianness.cc  endianness.h  merkle.cc  merkle.h  midstate.cc  midstate.h  normalizer.cc  normalizer.h  rolling_caps.h  targets.cc  targets.h
src/obs/: log.cc  log.h  metrics.cc  metrics.h
src/registry/: types.h  work_source_registry.cc  work_source_registry.h
src/scheduler/: scheduler.cc  scheduler.h
src/store/: ledger.h  outbox.h
src/submit/: cpu_verify.cc  cpu_verify.h  gbt_submitter.cc  gbt_submitter.h  stratum_submitter.h  submit_router.cc  submit_router.h
src/tools/: cuda_bench.cpp  stratum_probe.cpp  stratum_registry_runner.cpp
tests/: test_adapters_compile.cpp  test_adapters_policy.cpp  test_cache_manager.cpp  test_cuda_auto_tune.cpp  test_cuda_device_hash.cpp  test_cuda_launch_plan.cpp  test_cuda_perf_sweep.cpp  test_endianness.cpp  test_gbt_adapter.cpp  test_gbt_regtest_e2e.cpp  test_gbt_regtest_pow_submit.cpp  test_gbt_submitter.cpp  test_headers_build.cpp  test_hit_ring.cpp  test_log.cpp  test_merkle_and_submit.cpp  test_metrics_and_cpuverify.cpp  test_midstate.cpp  test_normalizer.cpp  test_normalizer_caps_and_extranonce.cpp  test_pool_profiles.cpp  test_pool_router.cpp  test_predict_worker.cpp  test_registry.cpp  test_scheduler.cpp  test_store_persistence.cpp  test_targets.cpp
web-bundles/agents/: dev-cgminer-specialist.md  dev-cgminer-specialist.txt
